--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
         "@tsparticles/slim": "^3.8.1",
         "atmn": "^0.0.28",
         "autumn-js": "^0.1.43",
-        "bcrypt": "^6.0.0",
-        "better-auth": "^1.4.18",
+    "bcrypt": "^6.0.0",
+    "better-auth": "^1.4.18",
+    "@supabase/supabase-js": "^2.39.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
