--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "@radix-ui/react-tooltip": "^1.2.7",
         "@react-three/drei": "^10.4.4",
         "@react-three/fiber": "^9.0.0-alpha.8",
+        "@supabase/auth-helpers-nextjs": "^0.15.0",
+        "@supabase/supabase-js": "^2.93.3",
         "@tabler/icons-react": "^3.35.0",
         "@tailwindcss/typography": "^0.5.19",
         "@tsparticles/engine": "^3.8.1",
@@ -50,9 +52,8 @@
         "@tsparticles/slim": "^3.8.1",
         "atmn": "^0.0.28",
         "autumn-js": "^0.1.43",
-    "bcrypt": "^6.0.0",
-    "better-auth": "^1.4.18",
-    "@supabase/supabase-js": "^2.39.3",
+        "bcrypt": "^6.0.0",
+        "better-auth": "^1.4.18",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
