Final infrastructure fix: Disable Turbopack and cleanup

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 [build]
-command = "npm run build"
+command = "NEXT_DISABLE_TURBOPACK=1 npm run build"
 publish = ".next"
